--- a/src/components/navigate/Navigate.css
+++ b/src/components/navigate/Navigate.css
@@ -137,7 +137,7 @@
 
 .mobile-menu .nav-link {
     font-size: 1.2rem;
-    color: var(--color-dark);
+    color: var(--color-bg);
 }
 
 .mobile-menu.open {
@@ -151,6 +151,9 @@
 ========================= */
 
 @media (max-width: 1023px) {
+    .navbar {
+        margin: 0
+    }
     .navbar-links {
         display: none;
     }
